--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: php
 install:
-  - sudo apt-get install dpkg-dev debhelper quilt fakeroot
+  - apt-get install dpkg-dev debhelper quilt fakeroot
 script:
   - dpkg-buildpackage -b -us -uc
